# rusty-weather

./: .gitignore  Cargo.toml  README.md
dashboard/: Cargo.toml
dashboard/src/: main.rs
firmware/: Cargo.toml  partitions.csv  sdkconfig.defaults
firmware/.cargo/: config.toml
src/: main.rs
