[package]
edition      = "2021"
name         = "rusty-weather"
rust-version = "1.86"
version      = "0.1.0"

[[bin]]
name = "rusty-weather"
path = "./src/bin/main.rs"

[dependencies]
anyhow = "1"
log = "0.4"
esp-idf-svc = { version = "0.48", features = ["std", "binstart", "experimental"] }

[build-dependencies]
embuild = "0.31"

critical-section = "1.2.0"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
